source/blender/gpu/metal/mtl_memory.hh
@@ -107,6 +107,11 @@ class MTLUniformBuf;
 /* MTLBuffer allocation wrapper. */
 class MTLBuffer {
 
+ public:
+  /* NOTE: ListBase API is not used due to cutsom destructor operation required to release
+   * Metal objective C buffer resource. */
+  gpu::MTLBuffer *next, *prev;
+
  private:
   /* Metal resource. */
   id<MTLBuffer> metal_buffer_;
@@ -177,6 +182,8 @@ class MTLBuffer {
 
   /* Safety check to ensure buffers are not used after free. */
   void debug_ensure_used();
+
+  MEM_CXX_CLASS_ALLOC_FUNCS("MTLBuffer");
 };
 
 /* View into part of an MTLBuffer. */
@@ -333,6 +340,8 @@ class MTLSafeFreeList {
       }
     }
   }
+
+  MEM_CXX_CLASS_ALLOC_FUNCS("MTLSafeFreeList");
 };
 
 /* MTLBuffer pools. */
@@ -362,7 +371,7 @@ class MTLBufferPool {
 #endif
 
   /* Metal resources. */
-  bool ensure_initialised_ = false;
+  bool initialized_ = false;
   id<MTLDevice> device_ = nil;
 
   /* The buffer selection aims to pick a buffer which meets the minimum size requirements.
@@ -389,7 +398,10 @@ class MTLBufferPool {
 
   std::mutex buffer_pool_lock_;
   blender::Map<MTLBufferResourceOptions, MTLBufferPoolOrderedList *> buffer_pools_;
-  blender::Vector<gpu::MTLBuffer *> allocations_;
+
+  /* Linked list to track all existing allocations. Prioritizing fast insert/deletion. */
+  gpu::MTLBuffer *allocations_list_base_;
+  uint allocations_list_size_;
 
   /* Maintain a queue of all MTLSafeFreeList's that have been released
    * by the GPU and are ready to have their buffers re-inserted into the
@@ -432,6 +444,11 @@ class MTLBufferPool {
   void ensure_buffer_pool(MTLResourceOptions options);
   void insert_buffer_into_pool(MTLResourceOptions options, gpu::MTLBuffer *buffer);
   void free();
+
+  /* Allocations list. */
+  void allocations_list_insert(gpu::MTLBuffer *buffer);
+  void allocations_list_delete(gpu::MTLBuffer *buffer);
+  void allocations_list_delete_all();
 };
 
 /* Scratch buffers are circular-buffers used for temporary data within the current frame.
@@ -492,6 +509,8 @@ class MTLScratchBufferManager {
    * This call will perform a partial flush of the buffer starting from
    * the last offset the data was flushed from, to the current offset. */
   void flush_active_scratch_buffer();
+
+  MEM_CXX_CLASS_ALLOC_FUNCS("MTLBufferPool");
 };
 
 /** \} */
